--- a/index.css
+++ b/index.css
@@ -38,3 +38,20 @@
 .centrer {
     text-align: center;
 }
+
+#control-window {
+    position: fixed;
+    top: 100px;
+    right: 10px;
+    background-color: #fff;
+    padding: 10px;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    text-align: left;
+}
+
+#control-window label {
+    display: block;
+    margin-bottom: 5px;
+}
